# version_check_test

./: CHANGELOG.rst
.github/: auto_version_check.py  auto_version_update.py  xml_finder.sh
.github/PULL_REQUEST_TEMPLATE/: develop_to_main.md  feature_to_develop.md  hotfix_to_main.md
.github/workflows/: pr.yml  version_lint.yml
antis_nav_amcl/: package.xml
antis_nav_bringup/bringup/: package.xml
antis_nav_common/: package.xml
antis_nav_controller_plugins/: package.xml
antis_nav_controller_server/: package.xml
antis_nav_core/: package.xml
antis_nav_costmap_2d/: package.xml
antis_nav_lifecycle_manager/: package.xml
antis_nav_msgs/: package.xml
antis_nav_planner_plugins/: package.xml
antis_nav_planner_server/: package.xml
antis_nav_util/: package.xml
antis_nav_voxel_grid/: package.xml
antis_navigation/: package.xml
