<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antis_nav_controller_server</name>
  <version>0.11.2</version>
  <description>Controller Server</description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <maintainer email="osi@robotis.com">seungiloh</maintainer>
  <license>Apache-2.0</license>
  <author email="osi@robotis.com">seungiloh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>
  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>antis_nav_util</depend>
  <depend>antis_nav_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_2d_msgs</depend>
  <depend>antis_nav_core</depend>
  <depend>antis_nav_costmap_2d</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <antis_nav_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
