<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>antis_nav_costmap_2d</name>
  <version>0.12.0</version>
  <description>
    This package provides an implementation of a 2D costmap that takes in sensor
    data from the world, builds a 2D or 3D occupancy grid of the data (depending
    on whether a voxel based implementation is used), and inflates costs in a
    2D costmap based on the occupancy grid and a user specified inflation radius.
    This package also provides support for map_server based initialization of a
    costmap, rolling window based costmaps, and parameter based subscription to
    and configuration of sensor topics.
  </description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <maintainer email="osi@robotis.com">seungiloh</maintainer>
  <license>BSD-3-Clause</license>
  <license>Apache-2.0</license>
  <author email="osi@robotis.com">seungiloh</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>

  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>map_msgs</depend>
  <depend>message_filters</depend>
  <depend>antis_nav_msgs</depend>
  <depend>antis_nav_util</depend>
  <depend>antis_nav_voxel_grid</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>
</package>