<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>antis_nav_planner_server</name>
  <version>0.11.3</version>
  <description>Planner Server</description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <maintainer email="osi@robotis.com">seungiloh</maintainer>
  <license>Apache-2.0</license>
  <author email="osi@robotis.com">seungiloh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>antis_nav_util</depend>
  <depend>antis_nav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav2_common</depend>
  <depend>tf2_ros</depend>
  <depend>antis_nav_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>antis_nav_core</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>