<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>antis_nav_util</name>
  <version>0.11.3</version>
  <description>TODO</description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <maintainer email="osi@robotis.com">seungiloh</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-3-Clause</license>
  <author email="osi@robotis.com">seungiloh</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <depend>nav2_common</depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>antis_nav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>test_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>action_msgs</depend>

  <exec_depend>libboost-program-options</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>action_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>