<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antis_navigation</name>
  <version>0.11.2</version>
  <description>ROS2 packages for antis_navigation</description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <license>ROBOTIS</license>
  <author email="kmjung@robotis.com">kayman</author>
  <author email="osi@robotis.com">seungiloh</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
